--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <body>
         <script src="assets/data/quotes.js"></script>
         <script src="assets/js/app.js"></script>
-        
+        <script src="assets/js/ajax.js"></script>
     </body>
 </html>
